--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,6 +48,7 @@
     "graphql-tag": "^2.12.6",
     "input-otp": "1.4.1",
     "lucide-react": "^0.548.0",
+    "@tanstack/react-query": "^5.59.20",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
